<resources>
    <string name="app_name" translatable="false">易约挂号</string>
    <string name="slogan" translatable="false">易约挂号  轻松挂号</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="common_example" translatable="false">示例图片</string>
    <string name="app_upgrade_tip_title" translatable="false">Release Notes (%1$s)</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">CANCEL</string>
    <string name="wait_please" translatable="false">敬请期待</string>
    <string name="common_right_btn_title" translatable="false">新增</string>
    <string name="self_info_fragment_title" translatable="false">账号信息</string>
    <string name="home" translatable="false">首页</string>
    <string name="msg" translatable="false">消息</string>
    <string name="mine" translatable="false">我的</string>
    <string name="splash_content_description" translatable="false">跳转页面</string>
    <string name="press_again_exit" translatable="false">再按一次退出</string>
    <string name="hint_username" translatable="false">请输入用户名</string>
    <string name="hint_password" translatable="false">请输入密码</string>
    <string name="btn_login_text" translatable="false">登录</string>
    <string name="btn_registet_text" translatable="false">注册</string>
    <string name="Success" translatable="false">登录成功</string>
    <string name="Loading" translatable="false">正在加载</string>
    <string name="back_login" translatable="false">返回</string>
    <string name="LOGIN_LOADING_MESSAGE" translatable="false">正在登录</string>
    <string name="LOGIN_SUCCESS_MESSAGE" translatable="false">登录成功</string>
    <string name="LOADING_MESSAGE" translatable="false">正在加载</string>
    <string name="SUCCESS_MESSAGE" translatable="false">加载成功</string>
    <string name="BACKUPING_MESSAGE" translatable="false">正在备份</string>
    <string name="BACKUP_SUCCESS_MESSAGE" translatable="false">备份成功</string>
    <string name="RESTORING_MESSAGE" translatable="false">正在还原</string>
    <string name="RESTORE_SUCCESS_MESSAGE" translatable="false">还原成功</string>
    <string name="sysm_manage_hospital" translatable="false">医院管理</string>
    <string name="sysm_manage_hospital_admin" translatable="false">医院管理员管理</string>
    <string name="sysm_manage_db" translatable="false">数据库管理</string>
    <string name="sysm_system_setting" translatable="false">系统设置</string>
    <string name="fragment_hos_manage_title" translatable="false">医院管理</string>
    <string name="fragment_hos_add_title" translatable="false">新增医院</string>
    <string name="row_hos_manager" translatable="false">医院管理员：</string>
    <string name="row_hos_name" translatable="false">医院名称：</string>
    <string name="row_hos_grade" translatable="false">医院级别：</string>
    <string name="row_hos_addr" translatable="false">地址：</string>
    <string name="row_hos_detailaddr" translatable="false">详细地址：</string>
    <string name="row_hos_phone" translatable="false">联系方式：</string>
    <string name="row_hos_introduction" translatable="false">医院介绍：</string>
    <string name="row_hos_picture" translatable="false">医院logo：</string>
    <string name="row_hos_invalid" translatable="false">有效性：</string>
    <string name="btn_add" translatable="false">保存</string>
    <string name="fragment_hos_modify_title" translatable="false">医院信息</string>
    <string name="fragment_db_manage_title" translatable="false">数据库管理</string>
    <string name="create_db_backup" translatable="false">新建备份</string>
    <string name="fragment_hosadmin_manage_title" translatable="false">医院管理员管理</string>
    <string name="fragment_hosadmin_add_title" translatable="false">添加医院管理员</string>
    <string name="fragment_hosadmin_modify_title" translatable="false">管理员信息</string>
    <string name="row_hosadmin_loginid" translatable="false">账号：</string>
    <string name="row_hosadmin_username" translatable="false">用户名：</string>
    <string name="row_hosadmin_loginpwd" translatable="false">密码：</string>
    <string name="hosm_manage_hosinfo" translatable="false">医院信息管理</string>
    <string name="hosm_manage_department" translatable="false">科室管理</string>
    <string name="hosm_manage_doctor" translatable="false">医疗专家管理</string>
    <string name="hosm_mange_reservation" translatable="false">接诊安排管理</string>
    <string name="hosm_manage_dataexcel" translatable="false">数据报表管理</string>
    <string name="fragment_hospital_info_title" translatable="false">医院信息管理</string>
    <string name="fragment_dep_manage_title" translatable="false">科室管理</string>
    <string name="fragment_dep_add_title" translatable="false">新增科室</string>
    <string name="row_dep_name" translatable="false">科室名称：</string>
    <string name="row_dep_type" translatable="false">科室类型：</string>
    <string name="fragment_dep_modify_title" translatable="false">科室信息</string>
    <string name="fragment_doctor_manage_title" translatable="false">医疗专家管理</string>
    <string name="fragment_doctor_modify_title" translatable="false">医生信息</string>
    <string name="fragment_doctor_add_title" translatable="false">新增医生</string>
    <string name="row_doctor_id" translatable="false">登录账号：</string>
    <string name="row_doctor_type" translatable="false">所属科室：</string>
    <string name="row_doctor_name" translatable="false">医生姓名：</string>
    <string name="row_doctor_sex" translatable="false">医生性别：</string>
    <string name="row_doctor_title" translatable="false">医生标题：</string>
    <string name="row_doctor_skill" translatable="false">擅长领域：</string>
    <string name="row_doctor_intro" translatable="false">个人简介：</string>
    <string name="row_doctor_photo" translatable="false">医生头像：</string>
    <string name="fragment_calendar_manage_title" translatable="false">接诊安排管理</string>
    <string name="fragment_calendar_add_title" translatable="false">新增接诊</string>
    <string name="row_visting_doctor" translatable="false">接诊医生：</string>
    <string name="row_visiting_date" translatable="false">接诊日期：</string>
    <string name="row_visiting_period" translatable="false">接诊时段：</string>
    <string name="row_visiting_num" translatable="false">接诊人数：</string>
    <string name="row_visiting_rnum" translatable="false">剩余人数：</string>
    <string name="row_visiting_valid" translatable="false">有效性：</string>
    <string name="fragment_calendar_modify_title" translatable="false">接诊信息</string>
    <string name="doctor_manage_reserdate" translatable="false">坐诊时间管理</string>
    <string name="doctor_manage_selfinfo" translatable="false">个人简历管理</string>
    <string name="doctor_manage_reserinfo" translatable="false">挂号信息管理</string>
    <string name="doctor_answer" translatable="false">回答用户提问</string>
    <string name="fragment_doctor_info_title" translatable="false">个人简历管理</string>
    <string name="patient_start_reservation" translatable="false">预约挂号</string>
    <string name="patient_depdoc_info" translatable="false">医生查询</string>
    <string name="patient_reservation_info" translatable="false">预约信息</string>
    <string name="patient_reservation_stop" translatable="false">停诊信息</string>
    <string name="patient_hospital_choice_fragment_title" translatable="false">医院选择</string>
    <string name="patient_deparment_choice_fragment_title" translatable="false">科室选择</string>
    <string name="patient_doctor_choice_fragment_title" translatable="false">医生选择</string>
    <string name="patient_calendar_choice_fragment_title" translatable="false">预约选择</string>
    <string name="patient_res_waiting_fragment_title" translatable="false">待就诊</string>
    <string name="patient_res_history_fragment_title" translatable="false">挂号记录</string>
    <string name="patient_res_success_fragment_title" translatable="false">已就诊</string>
    <string name="fragment_patient_manage_title" translatable="false">我的诊疗卡</string>
    <string name="add_idcard_title" translatable="false">添加诊疗卡</string>
    <string name="row_buser_id" translatable="false">用户ID：</string>
    <string name="row_buser_username" translatable="false">用户名：</string>
    <string name="row_buser_loginPwd" translatable="false">新密码：</string>
    <string name="row_buser_oldPwd" translatable="false">旧密码：</string>
    <string name="fragment_about_title" translatable="false">关于</string>
    <string name="about_copyright" translatable="false">Copyright © 2015 - %1$s GIGA All Rights Reserved.</string>
    <string name="about_gratitude" translatable="false">致谢</string>
    <string name="about_declaration" translatable="false">声明</string>
    <string name="about_license_agreement" translatable="false">许可协议</string>
    <string name="about_feedback" translatable="false">反馈</string>
    <string name="app_gratitude_content" translatable="false">
        \n\u3000\u3000首先，我要感谢我的父母，感谢父母将我抚养长大，感谢你们的付出，让我从小不用为生计、上学而发愁，可以一直做我自己想做的事情。
        \n\u3000\u3000其次，我要感谢我的导师许文庆老师，对我的研究提出了很多宝贵的意见，使我写作论文有了目标和方向。
        \n\u3000\u3000该项目使用了大量且成熟的开源组件，若没有这些开发者不图利益的将技术进行无私分享，没有你们作为先锋，我也无法独自一人完成如此庞大的系统。感谢你们让我有机会站在巨人的肩膀上！
        \n\u3000\u3000最后，仅以此项目向开源致敬！
    </string>
    <string name="app_declaration_content" translatable="false">
            \u3000\u3000本系统只是一个毕业设计，用于学术交流，绝无商业用途；也不会对本系统中所有网上查找到的各种资料、信息等进行恶意宣传、传播。再次强调：这只是本人的毕业设计，仅仅用于学术交流，绝无商业用途。\n
            \u3000\u3000本系统的开发者就是一名普通大学生，每天努力学习，刻苦钻研技术；法律方面初来乍到，一窍不通。但由于涉及法律问题，用户协议也不能胡写；于是本人参考了很多网上能够查找到的用户协议和用户协议范本，完成了本系统的用户协议(请转到《许可协议》中常看)。若有雷同，本人绝不是有意去模仿或抄袭。受影响的任何人、任何单位、任何公司。可任何时候与开发者取得联系并更改相关事项。\n
            \u3000\u3000本系统中的图标均来自于阿里巴巴图标库，该图标库中的图标均为开放图标，若有侵害任何人、任何单位、任何公司的利益，请立即与开发者取得联系并更改相关事项。\n
            \u3000\u3000本系统中若有任何不妥或者影响他人利益的事项，系统开发者绝不是有意为之，请立即与开发者取得联系并更改相关事项。\n
            \u3000\u3000请理解一名大学生开发这么一个庞然大物的困难度，实在是不容易；衷心感谢，理解万岁，社会主义万岁！\n
    </string>
</resources>