<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:hint="@string/hint_username"
                android:autofillHints="@string/hint_username"/>

            <EditText
                android:id="@+id/etPasswrod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:autofillHints="@string/hint_password"/>

            <com.qmuiteam.qmui.layout.QMUIButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login_text" />

            <com.qmuiteam.qmui.layout.QMUIButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_registet_text" />


        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>