<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:background="?attr/qmui_config_color_background"
        android:fitsSystemWindows="true">

        <com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout
            android:id="@+id/pull_to_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:scrollbars="vertical">

                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:background="#ffffff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:padding="10dp"
                            android:textSize="16sp"
                            android:background="#ffffff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/row_visting_doctor"
                            android:layout_alignParentLeft="true" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >
                            <TextView
                                android:layout_weight="1"
                                android:clickable="true"
                                android:id="@+id/tv_visiting_docotr"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textColor="@color/app_color_blue_2"
                                android:padding="10dp" />
                        </RelativeLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F6F5F4" />

                    <LinearLayout
                        android:background="#ffffff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:padding="10dp"
                            android:textSize="16sp"
                            android:background="#ffffff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/row_visiting_date"
                            android:layout_alignParentLeft="true" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >
                            <TextView
                                android:layout_weight="1"
                                android:clickable="true"
                                android:id="@+id/tv_visiting_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textColor="@color/app_color_blue_2"
                                android:padding="10dp" />
                        </RelativeLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F6F5F4" />

                    <LinearLayout
                        android:background="#ffffff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:padding="10dp"
                            android:textSize="16sp"
                            android:background="#ffffff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/row_visiting_period"
                            android:layout_alignParentLeft="true" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >
                            <TextView
                                android:layout_weight="1"
                                android:clickable="true"
                                android:id="@+id/tv_visiting_period"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textColor="@color/app_color_blue_2"
                                android:padding="10dp" />
                        </RelativeLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F6F5F4" />

                    <LinearLayout
                        android:background="#ffffff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:padding="10dp"
                                android:textSize="16sp"
                                android:background="#ffffff"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/row_visiting_num"
                                android:layout_alignParentLeft="true" />
                            <EditText
                                android:layout_weight="1"
                                android:id="@+id/et_visiting_num"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#ffffff"
                                android:textSize="16sp"
                                android:padding="10dp" />
                        </LinearLayout>


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F6F5F4" />

                    <LinearLayout
                        android:background="#ffffff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/llt_visiting_rnum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_visiting_rnum"
                                android:padding="10dp"
                                android:textSize="16sp"
                                android:background="#ffffff"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/row_visiting_rnum"
                                android:layout_alignParentLeft="true" />
                            <EditText
                                android:layout_weight="1"
                                android:id="@+id/et_visiting_rnum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#ffffff"
                                android:textSize="16sp"
                                android:padding="10dp" />
                        </LinearLayout>


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F6F5F4" />

                    <LinearLayout
                        android:background="#ffffff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:padding="10dp"
                            android:textSize="16sp"
                            android:background="#ffffff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/row_visiting_valid"
                            android:layout_alignParentLeft="true" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >
                            <TextView
                                android:layout_weight="1"
                                android:clickable="true"
                                android:id="@+id/tv_visiting_valid"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textColor="@color/app_color_blue_2"
                                android:padding="10dp" />
                        </RelativeLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F6F5F4" />

                    <com.qmuiteam.qmui.layout.QMUIButton
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="#00CD8C"
                        android:text="@string/btn_add"
                        android:textColor="@color/qmui_config_color_white"
                        android:textSize="16sp" />

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout>
    </FrameLayout>

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>